2012-05-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/hc08/ralloc2.c:
	  Bypass dry run for generated ic.

2012-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/gen.h,
	* src/hc08/gen.c (aopName): compile conditionally,
	  (assignResultValue): MSVC has no true/false,
	  (hasInchc08): fixed warning,
	  (genReceive): declarations first
	* src/hc08/ralloc.c: include dbuf_string.h,
	  (createStackSpil): removed unused slocBuffer
	* src/hc08/hc08.vcxproj.filters,
	* src/hc08/hc08.vcxproj: added ralloc2.cc and boost include dir
	* src/z80/gen.c (genCmp): fixed uninitialised warning
	* src/SDCCicode.h: cosmetics

2012-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/hc08/ralloc2.cc:
	  Added some debug info code.

2012-05-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCCralloc.hpp,
	  src/SDCCnaddr.cc,
	  src/SDCCnaddr.hpp,
	  src/SDCClospre.cc:
	  Declare some data types for lospre.
	
2012-05-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c,
	  src/hc08/ralloc.c:
	  Remove some unused variables.

2012-05-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (aopOp): Handle spill location correctly even
	  though it is not actually allocated during dry run

2012-05-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/ports/ds390/spec.mk:
	  Increase timeout from 40 to 60, since ds390 simulation on NetBSD is slow.

2012-05-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (aopAdrStr): handle incompletely initialized
	  spill location symbols during dry run

2012-05-06 Borut Razem <borut.razem AT gmail.com>

	* .version, doc/sdccman.lyx: bumped version to 3.1.5
	* ChangeLog: removed unicode BOM
	* support/sdbinutils/binutils/Makefile.am,
	  support/sdbinutils/binutils/Makefile.in: