@@ -33,6 +33,7 @@ eBBlock **eBBlockFromiCode (iCode *);
 void printEbbs (eBBlock **);
 iCode *iCodeLabelOptimize (iCode *);
 eBBlock *iCode2eBBlock (iCode * ic);
+void lospre (iCode *ic, ebbIndex *ebbi);
 int switchAddressSpacesOptimally (iCode *ic, ebbIndex *ebbi);
 const symbol *getAddrspaceiCode (const iCode *ic);
 void switchAddressSpaceAt (iCode *ic, const symbol *const addrspace);
