@@ -1,5 +1,11 @@
 2012-05-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/SDCCopt.c,
+	  src/SDCClospre.cc,
+	  Preparations for finding lospre optimization candidates.
+
+2012-05-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/z80/ralloc2.cc,
 	  src/hc08/ralloc2.c:
 	  Bypass dry run for generated ic.
